--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,20 @@
 {% block content %}
     <section>
         <article>
-            <div>
+            <!-- <div>
                 <img src="{{ url_for('static', filename='images/bread-for-hero.jpg') }}" alt="freshly baked loaves of bread on a wooden cutting board" width="1000">
-            </div>
+            </div> -->
         </article>
         <article>
-            <h1>savor the flavors of home</h1>
-            <p>authentic homemade guyanese cuisine.</p>
-            <a href="#" class="btn">order now</a>
+            <section class="home" id="home">
+                <div class="hero">
+                    <h3>Savor the Flavors of Home</h3>
+                    <p>Authentic homemade Guyanese cuisine.</p>
+                    <a href="" class="btn">Order Now</a>
+                </div>
+            </section>
         </article>
-        </div>
+        
     </section>
     <!-- Main content for things like updates, new products, specials and more. -->
     <section>
